<?xml version="1.0"?>
<package>
  <name>MonitoringRoboCup</name>
  <version>0.0.0</version>
  <description>
    UDP viewer for RhobanServer
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>

  <license>MIT</license>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>RhobanUtils</build_depend> <!-- rhobanproject/rhobanutils -->
  <build_depend>Eigen</build_depend> <!-- rhobandeps/eigen -->
  <build_depend>RhobanTeamPlay</build_depend> <!-- rhoban/teamplay -->
  <build_depend>RobocupReferee</build_depend> <!-- rhoban/robocupreferee -->

  <run_depend>RhobanUtils</run_depend>
  <run_depend>RobocupReferee</run_depend>
  <run_depend>Eigen</run_depend>
  <run_depend>RhobanTeamPlay</run_depend>

</package>

